samples/_failures_safe/1761522891_a586d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3df26a66.c: In function ‘main’:
./samples/SAFE/__tmp_3df26a66.c:152:13: error: expected expression at end of input
  152 |             operations[choice - 1](rows, cols,
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_3df26a66.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3df26a66.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3df26a66.c:152:13: error: expected declaration or statement at end of input
